--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "mix/websocket-daemon",
-  "description": "MixPHP WebSocket 守护程序 http://www.mixphp.cn",
+  "description": "Mix WebSocket Daemon http://www.mixphp.cn",
   "type": "project",
   "keywords": [
     "framework",
